# avsub

./: AUTHOR  CHANGELOG  README.md  VERSION  pyproject.toml  setup.py  yanked.txt
avsub/: __init__.py  __license__.py  __main__.py  __version__.py  actions.py  cli.py  consts.py  core.py  ffmpeg.py  globs.py  new.py  registry.py  str.py  utils.py  version.py
avsub/cli/: actions.py  parser.py
avsub/core/: __init__.py  consts.py  errors.py  notice.py  notice_.py  tools.py  x.py
